tests/errors/deep_unclosed.slpx
(set result
  (int/add 10
    (int/mul 5 (int/sub 20 3

(putln result)

